--- a/point/index.html
+++ b/point/index.html
@@ -3,10 +3,22 @@
 <head>
 	<meta charset="utf-8" />
 	<!-- add a title for the overall map page here -->
-	<title>TITLE</title>
+	<title>Web Page Title: Point Map Template</title>
 
 	<!-- Leaflet stylesheet -->
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+	<!-- JQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+	<!-- Latest compiled and minified Bootstrap -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 	<!-- Leaflet.js -->
 	<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
@@ -15,35 +27,79 @@
 	<script src="http://maps.stamen.com/js/tile.stamen.js"></script>
 
 	<style>
-	html, body, #mapDiv {
-		height: 100%;
-		width: 100%;
-	}
-	.leaflet-popup-content-wrapper {
-		opacity: 0.9;
-		border-radius: 5px;
-	}
-	h1 {
-        position: absolute;
-        z-index: 100;
-        top: 10px;
-        left: 60px;
-        padding: 8px 15px;
-        margin: 0;
-        color: whitesmoke;
-        font-size: 1.3em;
-        background: rgba(25,100,50,0.8);
-        border-radius: 0; 
-        font-weight: normal;
-    }
+		html, body, #mapDiv {
+			height: 100%;
+			width: 100%;
+		}
+		/*creates map info panel in upper right-hand corner*/
+		.panel-fixed {
+			position: absolute;
+			top: 15px;
+			right: 15px;
+			margin-left: 60px;
+			width: 320px;
+			text-align: center;
+			z-index: 50;
+		}
+		/*creates legend panel in lower right-hand corner*/
+		.panel-legend {
+			position: absolute;
+			bottom: 15px;
+			right: 15px;
+			margin-left: 60px;
+			text-align: center;
+			z-index: 50;
+		}
+		/*determines how the image files in the legend are formatted*/
+		.panel img {
+			width: 18px;
+			height: 18px;
+			float: left;
+		}
 	</style>
 </head>
 <body>
-	<div id='mapDiv'></div>
 
-	<!-- add the javascript file here -->
-	<script src = "1.js"></script>
-		
+<div id='mapDiv'></div>
+
+<!-- creates a group of Bootstrap panels to hold the title, description and download options -->
+<div class="panel group">
+	<!-- "panel-primary" determines the color and is built in to Bootstrap -->
+	<div class="panel panel-primary panel-fixed">
+		<div class="panel-heading">
+			<h3 class="panel-title"><span class="title">Map Title: Goes Here</span>
+				<!-- creates the drop down toggle button -->
+				<a data-toggle="collapse" href="#collapse1"><span class="glyphicon glyphicon-chevron-down"></span></a>
+			</h3>
+		</div>
+		<!-- allows the description panel to collapse into the header, while keeping the footer visible -->
+		<div id="collapse1" class="panel-collapse collapse">
+			<div class="panel-body">
+			 	 	<span class="description">Description Text Goes Here</span>
+			</div>
+		</div>
+		<!-- footer with the download links for various data formats, the files are on the Mapshop Drupal site -->
+		<div class="panel-footer">
+			<a id="dataset-download-KML" href="" target="_new">Download KML</a> -
+			<a id="dataset-download-zip" href="" target="_new">Download .zip</a>
+			<a id="dataset-download-geoJSON" href="" target="_new">Download&nbsp;GeoJSON</a>
+		</div>
+	</div>
+
+	<!-- creates a Bootstrap panel containing the legend information, currently hard coded -->
+	<div class="panel group"></div>
+	<div class="panel panel-primary panel-legend">
+		<div class="panel-heading">
+			<h3 class="panel-title"><span class="title">Legend</span></h3>
+		</div>
+		<div class="panel-body">
+			<img src="circle.png"><b>Pole</b>
+			<br /><img src="square.png"><b>Bench</b>
+			<br /><img src="star.png"><b>Shelter</b>
+		</div>
+	</div>
+</div>
+
 <script>
 	//Create map
 	var map = new L.map('mapDiv', {
@@ -60,33 +116,59 @@
 	var layer = new L.StamenTileLayer("toner-lite");
 
 	map.addLayer(layer);
-	//"data" is the var name in the js script file
-	var geoJSONLayer = L.geoJson(data, {
-		pointToLayer: function (feature, latlng) {
-			return L.circleMarker (latlng, {
-				//this is where you can change the circles
-				radius: 4,
-				fillColor: "#2eb8b8",
-				color: "#000",
-				weight: 1,
-				opacity: 1,
-				fillOpacity: 0.8
-			});
-		},
 
-        onEachFeature: function(feature, layer) {   
-            var props = layer.feature.properties;
-            //change the "address" to whatever the property that you want to visualize
-            layer.bindPopup("<b>"+props.address+"</b>");
-                
-        }
-    }).addTo(map);
-		     
+	//create some custom icons!
+	var starIcon = L.icon({
+		iconUrl: 'star.png',
+		iconSize: [18, 18],
+		iconAnchor: [18, 18],
+		popupAnchor: [-9, -17]
+	});
+	var squareIcon = L.icon({
+		iconUrl: 'square.png',
+		iconSize: [15, 15],
+		iconAnchor: [15, 15],
+		popupAnchor: [-7, -14]
+	});
+	var circleIcon = L.icon({
+		iconUrl: 'circle.png',
+		iconSize: [18, 18],
+		iconAnchor: [18, 18],
+		popupAnchor: [-9, -17]
+	});
+
+	//null variable where we'll store the map data in a minute
+	var mapPoints = null;
+
+	// Get GeoJSON and put on it on the map when it loads
+	$.getJSON("1.geojson",function(data){
+		// set mapPoints to the dataset, and add the bus stop GeoJSON layer to the map
+		mapPoints = L.geoJson(data,{
+			onEachFeature: function (feature, layer) {
+				//creates a popup that lists all of the data for each point ... might want to filter out "null"
+				var props = layer.feature.properties;
+				var popupcontent = "";
+
+				$.each(props, function(fieldName, fieldValue){
+					popupcontent += "<b>"+fieldName+": </b>"+fieldValue + "<br/>";
+				})
+
+				layer.bindPopup(popupcontent);
+
+			}, pointToLayer: function (feature, latlng) {
+				//filter to assign the different icons to groups of points
+				if (feature.properties.Type == "Shelter"){
+					var marker = L.marker(latlng,{icon: starIcon});
+				} else if (feature.properties.Type == "Pole"){
+					var  marker = L.marker(latlng,{icon: circleIcon});
+				} else {
+					var marker = L.marker(latlng,{icon: squareIcon})
+				};
+				return marker;
+			}
+		}).addTo(map);
+	});
 </script>
-<header>
 
-	<!-- title that will show up on the screen -->
-	<h1>Title</h1>
-</header>
-	</body>
+</body>
 </html>
