--- a/point/index.html
+++ b/point/index.html
@@ -169,6 +169,6 @@
 		}).addTo(map);
 	});
 </script>
-
+<!-- Chrome doesn't like previewing this map, you'll need an IDE or Github -->
 </body>
 </html>
